--- a/style.css
+++ b/style.css
@@ -7,7 +7,22 @@
     padding: 2rem;
     border: 6px solid #171717;
     border-radius: 30px;    
-  }  
+  }
+  
+  @media only screen and (max-height: 600px) {
+    .container {
+      grid-template-columns:  60px 60px 60px 60px;
+      grid-template-rows: 60px 60px 60px 60px 60px 60px;
+      grid-gap: 1rem;
+      padding: 2rem;
+    }
+
+    .display p {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 18px;
+      margin: 1em;
+    }
+  }
   
   body {
     background-color: #3b404e;    
