--- a/style.css
+++ b/style.css
@@ -9,7 +9,22 @@
     border-radius: 30px;    
   }
   
-  @media only screen and (max-height: 600px) {
+  @media only screen and (max-height: 980px) {
+    .container {
+      grid-template-columns:  70px 70px 70px 70px;
+      grid-template-rows: 70px 70px 70px 70px 70px 70px;
+      grid-gap: 1rem;
+      padding: 2rem;
+    }
+
+    .display p {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 18px;
+      margin: 1em;
+    }
+  }
+
+  @media only screen and (max-height: 650px) {
     .container {
       grid-template-columns:  60px 60px 60px 60px;
       grid-template-rows: 60px 60px 60px 60px 60px 60px;
