--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .container {
     display: grid;
     background-color: rgb(45, 45, 45);
-    grid-template-columns:  120px 120px 120px 120px;
-    grid-template-rows: 120px 120px 120px 120px 120px 120px;
+    grid-template-columns:  repeat(4, minmax(40px, 120px));
+    grid-template-rows: repeat(6, minmax(10px, 120px));
     grid-gap: 1rem;
     padding: 2rem;
     border: 6px solid #171717;
@@ -19,7 +19,7 @@
   .item {
     background-color: #7f7f7f;    
     color: #fff;
-    border-radius: 35px;
+    border-radius: 5px;
     border: 0px solid #171717;
     display: flex;
     justify-content: center;
@@ -45,7 +45,7 @@
     grid-column: 4;
     grid-row: 6 / 6;    
     color: #000000;
-    border-radius: 35px;
+    border-radius: 5px;
     border: 0px solid #171717;
     display: flex;
     justify-content: center;
@@ -59,7 +59,7 @@
     background-color: #dbd6d6;    
     color: #000000;
     grid-column: 4 / 4;
-    border-radius: 35px;
+    border-radius: 5px;
     border: 0px solid #171717;
     display: flex;
     justify-content: center;
@@ -105,12 +105,14 @@
   }
 
   @media only screen and (max-height: 980px) {
+    /*
     .container {
       grid-template-columns:  70px 70px 70px 70px;
       grid-template-rows: 70px 70px 70px 70px 70px 70px;
       grid-gap: 1rem;
       padding: 2rem;
     }
+    */
 
     .display p {
       font-family: 'Orbitron', sans-serif;
@@ -120,12 +122,14 @@
   }
 
   @media only screen and (max-height: 650px) {
+    /*
     .container {
       grid-template-columns:  60px 60px 60px 60px;
       grid-template-rows: 60px 60px 60px 60px 60px 60px;
       grid-gap: 1rem;
       padding: 2rem;
     }
+    */  
 
     .display p {
       font-family: 'Orbitron', sans-serif;
