--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .container {
     display: grid;
     background-color: rgb(45, 45, 45);
-    grid-template-columns:  repeat(4, minmax(40px, 120px));
-    grid-template-rows: repeat(6, minmax(10px, 120px));
+    grid-template-columns:  repeat(4, 120px);
+    grid-template-rows: repeat(6, 120px);
     grid-gap: 1rem;
     padding: 2rem;
     border: 6px solid #171717;
@@ -101,40 +101,88 @@
   p {
     font-family: 'Orbitron', sans-serif;
     font-size: 40px;
+    font-weight: bold;
     margin: 1em;
   }
 
+  button {
+    font-family: 'Orbitron', sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+  }
+
   @media only screen and (max-height: 980px) {
-    /*
     .container {
       grid-template-columns:  70px 70px 70px 70px;
       grid-template-rows: 70px 70px 70px 70px 70px 70px;
-      grid-gap: 1rem;
-      padding: 2rem;
+      grid-gap: 0.8rem;
+      padding: 1.8rem;
     }
-    */
 
     .display p {
       font-family: 'Orbitron', sans-serif;
       font-size: 18px;
       margin: 1em;
+    }
+
+    p {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 40px;
+      margin: 1em;
+    }
+
+    button {
+      font-size: 25px;
     }
   }
 
   @media only screen and (max-height: 650px) {
-    /*
     .container {
       grid-template-columns:  60px 60px 60px 60px;
       grid-template-rows: 60px 60px 60px 60px 60px 60px;
-      grid-gap: 1rem;
-      padding: 2rem;
+      grid-gap: 0.6rem;
+      padding: 1.6rem;
     }
-    */  
 
     .display p {
       font-family: 'Orbitron', sans-serif;
       font-size: 18px;
       margin: 1em;
+    }
+
+    p {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 20px;
+      margin: 1em;
+    }
+
+    button {
+      font-size: 20px;
+    }
+  }
+
+  @media only screen and (max-height: 530px) {
+    .container {
+      grid-template-columns:  40px 40px 40px 40px;
+      grid-template-rows: 40px 40px 40px 40px 40px 40px;
+      grid-gap: 0.5rem;
+      padding: 1.5rem;
+    }
+
+    .display p {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 15px;
+      margin: 1em;
+    }
+
+    p {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 15px;
+      margin: 1em;
+    }
+
+    button {
+      font-size: 15px;
     }
   }
   
