--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
   }
   
   .item:active {
-    background-color: #949494;    
+    background-color: #ffffff;    
   } 
   
   .zero {
@@ -52,7 +52,7 @@
     align-items: center;
   }
   .operate:active {
-    background-color: #7c7a7a;        
+    background-color: #ffffff;        
   }
 
   .operator {
@@ -66,7 +66,7 @@
     align-items: center;
   }
   .operator:active {
-    background-color: #7c7a7a;        
+    background-color: #ffffff;        
   }
 
   .clear {    
@@ -82,7 +82,7 @@
   }
   
   .clear:active {
-    background-color: #822424;    
+    background-color: #ffffff;    
   }
 
   .display {
